@@ -1,3 +1,8 @@
+2009-01-11  Roland McGrath  <roland@redhat.com>
+
+	* known-dwarf.awk: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2008-12-24  Roland McGrath  <roland@redhat.com>
 
 	* Makefile.am ($(srcdir)/elfutils.spec.in): Rewrite awk magic.
